# StochasticFlock

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bird_solver.cpp  constants.hpp  old_simulation.hpp  pyproject.toml  python_bindings.cpp  requirements.txt  simulation.hpp  tuning.py  visual.cpp  visual.hpp
.github/workflows/: publish.yml
src/: bird_solver.cpp  constants.hpp  pch_exec.hpp  pch_python.hpp  python_bindings.cpp  simulation.hpp  visual.hpp
src/stochastic_flock/: __init__.py
