[build-system]
requires = ["scikit-build-core", "pybind11"] 
build-backend = "scikit_build_core.build"

[project]
name = "stochastic_flock"
version = "0.1.0"
description = "Unified Bird Flocking Simulation (1D & 2D)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[tool.scikit-build]
cmake.args = ["-DSKBUILD=ON"]
wheel.expand-macos-universal-tags = true