[build-system]
requires = ["scikit-build-core>=0.8", "pybind11"] 
build-backend = "scikit_build_core.build"


[project]
name = "stochastic_flock"
version = "0.1.0"
description = "Unified Bird Flocking Simulation (1D & 2D)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Michael Stavreff", email = "Mstavreff@outlook.com"},
]
dependencies = [
    "numpy",
]

[tool.scikit-build]
wheel.packages = ["src/stochastic_flock"]
editable.mode = "redirect"      
cmake.args = ["-DSKBUILD=ON"]
build-dir = "build/{wheel_tag}"