[build-system]
requires = ["scikit-build-core>=0.8", "pybind11"] 
build-backend = "scikit_build_core.build"


[project]
name = "stochastic_flock"
version = "0.1.2"
description = "Unified Bird 2D Flocking Simulation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Michael Stavreff", email = "Mstavreff@outlook.com"},
]
dependencies = [
    "numpy",
]

[tool.scikit-build]
wheel.packages = ["src/stochastic_flock"]
wheel.install-dir = "src/stochastic_flock"
editable.mode = "redirect"      
cmake.args = ["-DSKBUILD=ON"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.sdist]
include = ["CMakeLists.txt", "src/**"]